@startuml
title Diagrama de clases del mundo Esports
left to right direction

' Definición de clases
class Esports {
    - equipos : ArrayList<Equipo>
    --
    + Esports()
    + addEquipo(equipo : Equipo) : void
    + getEquipos() : ArrayList<Equipo>
    + darEquipoPorNombre(nombre : String) : Equipo
}

class Equipo {
    - idEquipo : String
    - nombre : String
    - idDirector : String
    - jugadores : ArrayList<Jugador>
    - partidas : ArrayList<Partida>
    --
    + Equipo(idEquipo : String, nombre : String, jugadores : ArrayList<Jugador>, idDirector : String, partidas : ArrayList<Partida>)
    + addJugador(nuevoJugador : Jugador) : void
    + getJugadores() : ArrayList<Jugador>
    + getIdEquipo() : String
    + setIdEquipo(idEquipo : String) : void
    + getNombre() : String
    + setNombre(nombre : String) : void
    + getIdDirector() : String
    + setIdDirector(idDirector : String) : void
    + existeJugadorConNickname(nickname : String) : boolean
    + addPartida(pPartida : Partida) : void
    + getPartidas() : ArrayList<Partida>
    + promedioVictorias() : double
    + promedioDerrotas() : double
}

class Jugador {
    - idJugador : String
    - idEquipo : String
    - nombre : String
    - nickname : String
    - correo : String
    - kills : int
    - deaths : int
    - assists : int
    --
    + Jugador(idJugador : String, idEquipo : String, nombre : String, nickname : String, correo : String, kills : int, deaths : int, assists : int)
    + getIdJugador() : String
    + setIdJugador(idJugador : String) : void
    + getIdEquipo() : String
    + setIdEquipo(idEquipo : String) : void
    + getNombre() : String
    + setNombre(nombre : String) : void
    + getNickname() : String
    + setNickname(nickname : String) : void
    + getCorreo() : String
    + setCorreo(correo : String) : void
    + getKills() : int
    + setKills(kills : int) : void
    + getDeaths() : int
    + setDeaths(deaths : int) : void
    + getAssists() : int
    + setAssists(assists : int) : void
    + getKDA() : double
}

class Partida {
    - idPartida : String
    - equipo1 : Equipo
    - equipo2 : Equipo
    - puntuacionEquipo1 : int
    - puntuacionEquipo2 : int
    - fechaHora : LocalDateTime
    - ganador : Equipo
    --
    + Partida(idPartida : String, equipo1 : Equipo, equipo2 : Equipo, puntuacionEquipo1 : int, puntuacionEquipo2 : int)
    + getIdPartida() : String
    + getEquipo1() : Equipo
    + getEquipo2() : Equipo
    + getPuntuacionEquipo1() : int
    + getPuntuacionEquipo2() : int
    + getGanador() : Equipo
    + getFechaHora() : LocalDateTime
    + toString() : String
}

class DirectorEquipo {
    - idDirector : String
    - idEquipo : String
    - nombre : String
    - correo : String
    - equipoAsignado : Equipo
    --
    + DirectorEquipo(idDirector : String, idEquipo : String, nombre : String, correo : String, equipoAsignado : Equipo)
    + getIdDirector() : String
    + setIdDirector(idDirector : String) : void
    + getIdEquipo() : String
    + setIdEquipo(idEquipo : String) : void
    + getNombre() : String
    + setNombre(nombre : String) : void
    + getCorreo() : String
    + setCorreo(correo : String) : void
    + getEquipoAsignado() : Equipo
    + setEquipoAsignado(equipoAsignado : Equipo) : void
    + agregarJugador(nuevoJugador : Jugador, pDataFolderPath : String) : void
    + registrarPartida(pEquipoRival : Equipo, pPuntuacionPropia : int, pPuntuacionRival : int, pDataFolderPath : String) : void
    + consultarListaJugadores() : List<Jugador>
    + ordenarJugadoresPorKDA() : void
    + consultarJugadorConMasKills() : Jugador
}

' Asociaciones
Esports "1" --> "*" Equipo : equipos
Equipo "1" --> "*" Jugador : jugadores
Equipo "1" --> "*" Partida : partidas
Partida --> "1" Equipo : equipo1
Partida --> "1" Equipo : equipo2
DirectorEquipo --> "1" Equipo : equipoAsignado

@enduml
